kubernetes/business.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business
  labels:
    app: business
spec:
  selector:
    matchLabels:
      app: business
  template:
    metadata:
      labels:
        app: business
    spec:
      containers:
        - name: business
          image: ekezoh/shifter-shop.business
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: business
spec:
  type: NodePort
  selector:
    app: business
  ports:
    - port: 80
      targetPort: 80
