kubernetes/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: maherydock77/shifter-shop.admin
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  labels:
    name: admin
spec:
  rules:
    - host: admin.shiftershop.pro
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: admin
                port:
                  number: 80
